--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         That was why I decided to build this. I wanted to implement these algorithms using Vanilla JavaScript only.
         <br />
 
-        How did I coin <span class="font-italic">Numerithms?</span>
+        How did I coin the word, <span class="font-italic">Numerithms?</span>
         <br />
         <span class="font-weight-bold">Numerical methods</span> + <span class="font-weight-bold">Algorithms</span> = Numerithms
 
